--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
 </head>
 
 <body><div><pre>
+┌──────────────────────────────────────────────────────────────────────────────┐
+│ ~/index.html                                                                 │
+└──────────────────────────────────────────────────────────────────────────────┘
 0 -  =  - 1 -  =  - 2 -  =  - 3 -  =  - 4 -  =  - 5 -  =  - 6 -  =  - 7 -  =  - 
 ╔══════════════════════════════════════════════════════════════════════════════╗
 ║                                                                              ║
 ║                                                               /__/           ║
-║    ____ _                                                 /_//  /_/__/__/    ║
+║    ____ _                               O                 /_//  /_/__/__/    ║
 ║   / ___| | __ _ ___ ___ _   _                            / //  / /  /  /_/   ║
-║  | |  _| |/ _` / __/ __| | | |                         _/_//__/_/__/__/ /_/_/║
-║  | |_| | | (_| \__ \__ \ |_| |                   _____/      )        \/_/_/_║
+║  | |  _| |/ _` / __/ __| | | |           o             _/_//__/_/__/__/ /_/_/║
+║  | |_| | | (_| \__ \__ \ |_| |          .        _____/      )        \/_/_/_║
 ║   \____|_|\__,_|___/___/\__, |                 _/ )   )   )    )   )    )   )║
 ║                         |___/                _/  \      )   )    )    )   )  ║
-║     _____               _                  _/__   \        )   )    )    )   ║
-║    | ____|   _  ___  __| |              __/ /  \   \         )    )    )    )║
-║    |  _|| | | |/ _ \/ _` |            _/oO /[ ] \   \           )    )    )  ║
-║    | |__| |_| |  __/ (_| |           /  __ \____/    \      ) _________ )    ║
-║    |_____\__, |\___|\__,_|            \/              \    __/=========\   ) ║
-║          |___/                                        /     ===========|     ║
-║                                     /\_/\__/\        /     _===========| )   ║
-║       _____ _     _                 \__________     /       \_=======_/    ) ║
+║     _____               _                  _/     \        )   )    )    )   ║
+║    | ____|   _  ___  __| |        O     __/ /##\   \ )       )    )    )    )║
+║    |  _|| | | |/ _ \/ _` |            _/oO /## #\   \    )      )    )    )  ║
+║    | |__| |_| |  __/ (_| |       o   /  __ \####/    \      ) _________ )    ║
+║    |_____\__, |\___|\__,_|        .   \/  \ \##/      \    __/=========\   ) ║
+║          |___/                             \          /     ===========|     ║
+║                                     /\_/\__/         /   ) \===========| )   ║
+║       _____ _     _                 \__________     /       \_________/    ) ║
 ║      |  ___[ ]___| |__                         \___/   )  )        )    )    ║
 ║      | |_  | / __| '_ \                             \________________________║
 ║      |  _| | \__ \ | | |                               \====\_               ║
@@ -35,10 +38,61 @@
 ║                                                           \====/             ║
 ║                                                            \__/              ║
 ╚══════════════════════════════════════════════════════════════════════════════╝
+ 
+Welcome to my website, the hub of all things me. This page mostly serves as a
+literal index of the rest of the side, but it also serves as a link directory
+and a few other functions.
 
- | <a href="https://github.com/glassyeyedfish">Github</a> |
+<span id=000>[<a href=#000>000</a>]</span> <span class=ma>Table of Contents</span>
+================================================================================
 
+Table of Contents ........................................................ [<a href=#000>000</a>]
+Where to Fine Me ......................................................... [<a href=#001>001</a>]
+Link Directory ........................................................... [<a href=#002>002</a>]
 
+<span id=001>[<a href=#001>001</a>]</span> <span class=ma>Where to Find Me</span>
+================================================================================
+
+* GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish</a>
+
+<span id=002>[<a href=#002>002</a>]</span> <span class=ma>Link Directory</span>
+================================================================================
+
+<span class=cy>SADGRL.ONLINE</span> : <a href=https://sadgrl.online/>https://sadgrl.online/</a>
+    The site which inspited me to make this site in the first place.
+
+<span class=cy>Kiss Linux</span> : <a href=https://kisslinux.org/>https://kisslinux.org/</a>
+    The website which inspired the design of mine.
+
+<span class=cy>Chad's Guide</span> : <a href=https://landchad.net/>https://landchad.net</a>
+    The "Chad's Guide to Starting Your Own Website". Used to start this very
+    website!
+
+<span class=cy>Vimm's Lair</span> : <a href=https://vimm.net/>https://vimm.net/</a>
+    An excellent source of retro games and the emulators needed to play them.
+
+<span class=cy>MetaMath Proof Explorer</span> : <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html</a>
+    A collection of incredibly rigerous, computer verified mathematical proofs
+    for thousands of theorems in maths and logic. I personally love this
+    website to death, but I doubt you will. Either way, it's here for those
+    of you who appreciate knoledge at it's purest.
+
+<span class=cy>W3Schools</span> : <a href=https://www.w3schools.com/>https://www.w3schools.com/</a>
+    A fantastic resource/reference for coding including HTML, CSS, JavaScript,
+    Python, Java, etc... I personally use it to remember how to declare a
+    variable every time I go back to a language I haven't used in a while.
+
+╔══════════════════════════════════════════════════════════════════════════════╗
+║ Published under the <a href=LICENSE>MIT License</a>, feel free to take what you like and make    ║
+║ cool things yourself!                                                        ║ 
+║                                                                              ║ 
+║ Created by Clyde (GlassyEyedFish)                                            ║ 
+╚══════════════════════════════════════════════════════════════════════════════╝
+0 -  =  - 1 -  =  - 2 -  =  - 3 -  =  - 4 -  =  - 5 -  =  - 6 -  =  - 7 -  =  - 
+┌──────────────────────────────────────────────────────────────────────────────┐
+│   Dedicated to all human beings.                                             │
+│       -- Thom Yorke                                                          │
+└──────────────────────────────────────────────────────────────────────────────┘
 </pre></div></body>
 
 </html>
