Wow man, it's a commit!

--- a/index.html
+++ b/index.html
@@ -46,16 +46,20 @@ and a few other functions.
 <span id=000>[<a href=#000>000</a>]</span> <span class=ma>Table of Contents</span>
 ================================================================================
 
+Navigate this pages with the links in the table. To come back to this table
+click the link in the header of any section below.
+
 Table of Contents ........................................................ [<a href=#000>000</a>]
 Where to Fine Me ......................................................... [<a href=#001>001</a>]
 Link Directory ........................................................... [<a href=#002>002</a>]
+Banners .................................................................. [<a href=#003>003</a>]
 
-<span id=001>[<a href=#001>001</a>]</span> <span class=ma>Where to Find Me</span>
+<span id=001>[<a href=#000>001</a>]</span> <span class=ma>Where to Find Me</span>
 ================================================================================
 
 * GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish</a>
 
-<span id=002>[<a href=#002>002</a>]</span> <span class=ma>Link Directory</span>
+<span id=002>[<a href=#000>002</a>]</span> <span class=ma>Link Directory</span>
 ================================================================================
 
 <span class=cy>SADGRL.ONLINE</span> : <a href=https://sadgrl.online/>https://sadgrl.online/</a>
@@ -81,6 +85,11 @@ Link Directory ........................................................... [<a h
     A fantastic resource/reference for coding including HTML, CSS, JavaScript,
     Python, Java, etc... I personally use it to remember how to declare a
     variable every time I go back to a language I haven't used in a while.
+
+<span id=003>[<a href=#000>003</a>]</span> <span class=ma>Banners</span>
+================================================================================
+
+<img src=https://sadgrl.online/images/homepage/button-new.gif href=https://sadgrl.online/> <img src=https://landchad.net/pix/landchad.gif href=https://landchad.net/> 
 
 ╔══════════════════════════════════════════════════════════════════════════════╗
 ║ Published under the <a href=LICENSE>MIT License</a>, feel free to take what you like and make    ║
