Fixed banner links.

--- a/index.html
+++ b/index.html
@@ -89,11 +89,12 @@ Banners .................................................................. [<a h
 <span id=003>[<a href=#000>003</a>]</span> <span class=ma>Banners</span>
 ================================================================================
 
-<img src=https://sadgrl.online/images/homepage/button-new.gif href=https://sadgrl.online/> <img src=https://landchad.net/pix/landchad.gif href=https://landchad.net/> 
+<a href=https://sadgrl.online/><img src=https://sadgrl.online/images/homepage/button-new.gif></a> <a href=https://landchad.net/><img src=https://landchad.net/pix/landchad.gif></a>
 
 ╔══════════════════════════════════════════════════════════════════════════════╗
 ║ Published under the <a href=LICENSE>MIT License</a>, feel free to take what you like and make    ║
-║ cool things yourself!                                                        ║ 
+║ cool things yourself! Of course, if you do take anything from this site or   ║ 
+║ get heavy inspiration from it, any kind of credit would be cool of you.      ║
 ║                                                                              ║ 
 ║ Created by Clyde (GlassyEyedFish)                                            ║ 
 ╚══════════════════════════════════════════════════════════════════════════════╝
