Hopefully more responsive?

--- a/index.html
+++ b/index.html
@@ -39,20 +39,21 @@
 ║                                                            \__/              ║
 ╚══════════════════════════════════════════════════════════════════════════════╝
  
-Welcome to my website, the hub of all things me. This page mostly serves as a
+<span class=gr>Welcome to my website, the hub of all things me. This page mostly serves as a
 literal index of the rest of the side, but it also serves as a link directory
-and a few other functions.
+and a few other functions.</span>
 
 <span id=000>[<a href=#000>000</a>]</span> <span class=ma>Table of Contents</span>
 ================================================================================
 
-Navigate this pages with the links in the table. To come back to this table
-click the link in the header of any section below.
+<span class=gr>Navigate this pages with the links in the table. To come back to this table
+click the link in the header of any section below.</span>
 
 Table of Contents ........................................................ [<a href=#000>000</a>]
 Where to Fine Me ......................................................... [<a href=#001>001</a>]
 Link Directory ........................................................... [<a href=#002>002</a>]
-Banners .................................................................. [<a href=#003>003</a>]
+JavaScript Projects ...................................................... [<a href=#003>003</a>]
+Banners .................................................................. [<a href=#004>004</a>]
 
 <span id=001>[<a href=#000>001</a>]</span> <span class=ma>Where to Find Me</span>
 ================================================================================
@@ -63,30 +64,37 @@ Banners .................................................................. [<a h
 ================================================================================
 
 <span class=cy>SADGRL.ONLINE</span> : <a href=https://sadgrl.online/>https://sadgrl.online/</a>
-    The site which inspited me to make this site in the first place.
+    <span class=gr>The site which inspited me to make this site in the first place.</span>
 
 <span class=cy>Kiss Linux</span> : <a href=https://kisslinux.org/>https://kisslinux.org/</a>
-    The website which inspired the design of mine.
+    <span class=gr>The website which inspired the design of mine.</span>
 
 <span class=cy>Chad's Guide</span> : <a href=https://landchad.net/>https://landchad.net</a>
-    The "Chad's Guide to Starting Your Own Website". Used to start this very
-    website!
+    <span class=gr>The "Chad's Guide to Starting Your Own Website". Used to start this very
+    website!</span>
 
 <span class=cy>Vimm's Lair</span> : <a href=https://vimm.net/>https://vimm.net/</a>
-    An excellent source of retro games and the emulators needed to play them.
+    <span class=gr>An excellent source of retro games and the emulators needed to play them.</span>
 
 <span class=cy>MetaMath Proof Explorer</span> : <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html</a>
-    A collection of incredibly rigerous, computer verified mathematical proofs
+    <span class=gr>A collection of incredibly rigerous, computer verified mathematical proofs
     for thousands of theorems in maths and logic. I personally love this
     website to death, but I doubt you will. Either way, it's here for those
-    of you who appreciate knoledge at it's purest.
+    of you who appreciate knoledge at it's purest.</span>
 
 <span class=cy>W3Schools</span> : <a href=https://www.w3schools.com/>https://www.w3schools.com/</a>
-    A fantastic resource/reference for coding including HTML, CSS, JavaScript,
+    <span class=gr>A fantastic resource/reference for coding including HTML, CSS, JavaScript,
     Python, Java, etc... I personally use it to remember how to declare a
-    variable every time I go back to a language I haven't used in a while.
+    variable every time I go back to a language I haven't used in a while.</span>
 
-<span id=003>[<a href=#000>003</a>]</span> <span class=ma>Banners</span>
+<span id=003>[<a href=#000>003</a>]</span> <span class=ma>JavaScript Projects</span>
+================================================================================
+
+<span class=cy>Clock</span> : <a href=site/clock.html>~/site/clock.html</a>
+    <span class=gr>A clock, timer, and stopwatch. A simple project mostly to learn how to
+    organize future projects on the site.</span>
+
+<span id=004>[<a href=#000>004</a>]</span> <span class=ma>Banners</span>
 ================================================================================
 
 <a href=https://sadgrl.online/><img src=https://sadgrl.online/images/homepage/button-new.gif></a> <a href=https://landchad.net/><img src=https://landchad.net/pix/landchad.gif></a>
