--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ click the link in the header of any section below.</span>
 Table of Contents ........................................................ [<a href=#000>000</a>]
 Where to Fine Me ......................................................... [<a href=#001>001</a>]
 Link Directory ........................................................... [<a href=#002>002</a>]
-JavaScript Projects ...................................................... [<a href=#003>003</a>]
+Projects ..................................................................[<a href=#003>003</a>]
 Banners .................................................................. [<a href=#004>004</a>]
 
 <span id=001>[<a href=#000>001</a>]</span> <span class=ma>Where to Find Me</span>
@@ -87,12 +87,10 @@ Banners .................................................................. [<a h
     Python, Java, etc... I personally use it to remember how to declare a
     variable every time I go back to a language I haven't used in a while.</span>
 
-<span id=003>[<a href=#000>003</a>]</span> <span class=ma>JavaScript Projects</span>
+<span id=003>[<a href=#000>003</a>]</span> <span class=ma>Projects</span>
 ================================================================================
 
-<span class=cy>Clock</span> : <a href=site/clock.html>~/site/clock.html</a>
-    <span class=gr>A clock, timer, and stopwatch. A simple project mostly to learn how to
-    organize future projects on the site.</span>
+<span class=gr>...there's nothing here.</span>
 
 <span id=004>[<a href=#000>004</a>]</span> <span class=ma>Banners</span>
 ================================================================================
