--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ click the link in the header of any section below.</span>
 Table of Contents ........................................................ [<a href=#000>000</a>]
 Where to Fine Me ......................................................... [<a href=#001>001</a>]
 Link Directory ........................................................... [<a href=#002>002</a>]
-Projects ..................................................................[<a href=#003>003</a>]
+Projects ................................................................. [<a href=#003>003</a>]
 Banners .................................................................. [<a href=#004>004</a>]
 
 <span id=001>[<a href=#000>001</a>]</span> <span class=ma>Where to Find Me</span>
