--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body><div><pre>
 ┌──────────────────────────────────────────────────────────────────────────────┐
-│ ~/indox.html                                                                 │
+│ ~/index.html                                                                 │
 └──────────────────────────────────────────────────────────────────────────────┘
 0 -  =  - 1 -  =  - 2 -  =  - 3 -  =  - 4 -  =  - 5 -  =  - 6 -  =  - 7 -  =  - 
 ╔══════════════════════════════════════════════════════════════════════════════╗
