--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 </head>
 
 <body><div><pre>
-┌──────────────────────────────────────────────────────────────────────────────┐
-│ ~/index.html                                                                 │
-└──────────────────────────────────────────────────────────────────────────────┘
++------------------------------------------------------------------------------+
+| ~/index.html                                                                 |
++------------------------------------------------------------------------------+
 0 -  =  - 1 -  =  - 2 -  =  - 3 -  =  - 4 -  =  - 5 -  =  - 6 -  =  - 7 -  =  - 
-╔══════════════════════════════════════════════════════════════════════════════╗
-║                                                                              ║
-║                                                               /__/           ║
-║    ____ _                               O                 /_//  /_/__/__/    ║
-║   / ___| | __ _ ___ ___ _   _                            / //  / /  /  /_/   ║
-║  | |  _| |/ _` / __/ __| | | |           o             _/_//__/_/__/__/ /_/_/║
-║  | |_| | | (_| \__ \__ \ |_| |          .        _____/      )        \/_/_/_║
-║   \____|_|\__,_|___/___/\__, |                 _/ )   )   )    )   )    )   )║
-║                         |___/                _/  \      )   )    )    )   )  ║
-║     _____               _                  _/     \        )   )    )    )   ║
-║    | ____|   _  ___  __| |        O     __/ /##\   \ )       )    )    )    )║
-║    |  _|| | | |/ _ \/ _` |            _/oO /## #\   \    )      )    )    )  ║
-║    | |__| |_| |  __/ (_| |       o   /  __ \####/    \      ) _________ )    ║
-║    |_____\__, |\___|\__,_|        .   \/  \ \##/      \    __/=========\   ) ║
-║          |___/                             \          /     ===========|     ║
-║                                     /\_/\__/         /   ) \===========| )   ║
-║       _____ _     _                 \__________     /       \_________/    ) ║
-║      |  ___[ ]___| |__                         \___/   )  )        )    )    ║
-║      | |_  | / __| '_ \                             \________________________║
-║      |  _| | \__ \ | | |                               \====\_               ║
-║      | |   |_|___/_| |_|                                \=====\              ║
-║      |_|                                                 \=====\             ║
-║                                                           \====/             ║
-║                                                            \__/              ║
-╚══════════════════════════════════════════════════════════════════════════════╝
+╔------------------------------------------------------------------------------╗
+|                                                                              |
+|                                                               /__/           |
+|    ____ _                               O                 /_//  /_/__/__/    |
+|   / ___| | __ _ ___ ___ _   _                            / //  / /  /  /_/   |
+|  | |  _| |/ _` / __/ __| | | |           o             _/_//__/_/__/__/ /_/_/|
+|  | |_| | | (_| \__ \__ \ |_| |          .        _____/      )        \/_/_/_|
+|   \____|_|\__,_|___/___/\__, |                 _/ )   )   )    )   )    )   )|
+|                         |___/                _/  \      )   )    )    )   )  |
+|     _____               _                  _/     \        )   )    )    )   |
+|    | ____|   _  ___  __| |        O     __/ /##\   \ )       )    )    )    )|
+|    |  _|| | | |/ _ \/ _` |            _/oO /## #\   \    )      )    )    )  |
+|    | |__| |_| |  __/ (_| |       o   /  __ \####/    \      ) _________ )    |
+|    |_____\__, |\___|\__,_|        .   \/  \ \##/      \    __/=========\   ) |
+|          |___/                             \          /     ===========|     |
+|                                     /\_/\__/         /   ) \===========| )   |
+|       _____ _     _                 \__________     /       \_________/    ) |
+|      |  ___[ ]___| |__                         \___/   )  )        )    )    |
+|      | |_  | / __| '_ \                             \________________________|
+|      |  _| | \__ \ | | |                               \====\_               |
+|      | |   |_|___/_| |_|                                \=====\              |
+|      |_|                                                 \=====\             |
+|                                                           \====/             |
+|                                                            \__/              |
++------------------------------------------------------------------------------+
  
 <span class=gr>Welcome to my website, the hub of all things me. This page mostly serves as a
 literal index of the rest of the side, but it also serves as a link directory
@@ -97,18 +97,18 @@ Banners .................................................................. [<a h
 
 <a href=https://sadgrl.online/><img src=https://sadgrl.online/images/homepage/button-new.gif></a> <a href=https://landchad.net/><img src=https://landchad.net/pix/landchad.gif></a>
 
-╔══════════════════════════════════════════════════════════════════════════════╗
-║ Published under the <a href=LICENSE>MIT License</a>, feel free to take what you like and make    ║
-║ cool things yourself! Of course, if you do take anything from this site or   ║ 
-║ get heavy inspiration from it, any kind of credit would be cool of you.      ║
-║                                                                              ║ 
-║ Created by Clyde (GlassyEyedFish)                                            ║ 
-╚══════════════════════════════════════════════════════════════════════════════╝
++------------------------------------------------------------------------------+
+| Published under the <a href=LICENSE>MIT License</a>, feel free to take what you like and make    |
+| cool things yourself! Of course, if you do take anything from this site or   | 
+| get heavy inspiration from it, any kind of credit would be cool of you.      |
+|                                                                              | 
+| Created by Clyde (GlassyEyedFish)                                            | 
++------------------------------------------------------------------------------+
 0 -  =  - 1 -  =  - 2 -  =  - 3 -  =  - 4 -  =  - 5 -  =  - 6 -  =  - 7 -  =  - 
-┌──────────────────────────────────────────────────────────────────────────────┐
-│   Dedicated to all human beings.                                             │
-│       -- Thom Yorke                                                          │
-└──────────────────────────────────────────────────────────────────────────────┘
+┌------------------------------------------------------------------------------+
+|   Dedicated to all human beings.                                             |
+|       -- Thom Yorke                                                          |
+└------------------------------------------------------------------------------┘
 </pre></div></body>
 
 </html>
