--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@ Banners .................................................................. [<a h
     Python, Java, etc... I personally use it to remember how to declare a
     variable every time I go back to a language I haven't used in a while.</span>
 
+<span class=cy>NAND 2 Tetris</span> : <a href=https://www.nand2tetris.org/>https://www.nand2tetris.org/</a>
+    <span class=gr>The website hositng a course where you build a basic computer from a single
+    logic gate! A good starting place if you want to have a deep understanding
+    of how computers a put together.</span>
+
 <span id=003>[<a href=#000>003</a>]</span> <span class=ma>Projects</span>
 ================================================================================
 
