--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Banners .................................................................. [<a h
 
 <span class=cy>Chad's Guide</span> : <a href=https://landchad.net/>https://landchad.net</a>
     <span class=gr>The "Chad's Guide to Starting Your Own Website". Used to start this very
-    website!</span>
+    website! Although now it's hosted using Github Pages.</span>
 
 <span class=cy>Vimm's Lair</span> : <a href=https://vimm.net/>https://vimm.net/</a>
     <span class=gr>An excellent source of retro games and the emulators needed to play them.</span>
