--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Banners .................................................................. [<a h
 <span class=cy>NAND 2 Tetris</span> : <a href=https://www.nand2tetris.org/>https://www.nand2tetris.org/</a>
     <span class=gr>The website hositng a course where you build a basic computer from a single
     logic gate! A good starting place if you want to have a deep understanding
-    of how computers a put together.</span>
+    of how computers are put together.</span>
 
 <span id=003>[<a href=#000>003</a>]</span> <span class=ma>Projects</span>
 ================================================================================
@@ -113,7 +113,7 @@ Banners .................................................................. [<a h
 ┌------------------------------------------------------------------------------+
 |   Dedicated to all human beings.                                             |
 |       -- Thom Yorke                                                          |
-└------------------------------------------------------------------------------┘
++------------------------------------------------------------------------------+
 </pre></div></body>
 
 </html>
