--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@ Banners .................................................................. [<a h
 <span id=001>[<a href=#000>001</a>]</span> <span class=ma>Where to Find Me</span>
 ================================================================================
 
-* GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish</a>
+* GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish/</a>
+* Itch: <a href=https://glassyeyedfish.itch.io>https://glassyeyedfish.itch.io/</a>
 
 <span id=002>[<a href=#000>002</a>]</span> <span class=ma>Link Directory</span>
 ================================================================================
@@ -69,7 +70,7 @@ Banners .................................................................. [<a h
 <span class=cy>Kiss Linux</span> : <a href=https://kisslinux.org/>https://kisslinux.org/</a>
     <span class=gr>The website which inspired the design of mine.</span>
 
-<span class=cy>Chad's Guide</span> : <a href=https://landchad.net/>https://landchad.net</a>
+<span class=cy>Chad's Guide</span> : <a href=https://landchad.net/>https://landchad.net/</a>
     <span class=gr>The "Chad's Guide to Starting Your Own Website". Used to start this very
     website! Although now it's hosted using Github Pages.</span>
 
