--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Banners .................................................................. [<a h
 <span id=004>[<a href=#000>004</a>]</span> <span class=ma>Banners</span>
 ================================================================================
 
-<a href=https://sadgrl.online/><img src=https://sadgrl.online/images/homepage/button-new.gif></a> <a href=https://landchad.net/><img src=https://landchad.net/pix/landchad.gif></a>
+<a href=https://sadgrl.online/><img alt="sadgrl.online banner" src=https://sadgrl.online/images/homepage/button-new.gif></a> <a href=https://landchad.net/><img alt="landchad.net banner" src=https://landchad.net/pix/landchad.gif></a>
 
 +------------------------------------------------------------------------------+
 | Published under the <a href=LICENSE>MIT License</a>, feel free to take what you like and make    |
