Move styles to HTML file.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,72 @@
 <html lang='en'>
 
 <head>
-    <title>GlassyEyedFish</title>
-    <meta charset="UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="main-style.css"/>
+<title>GlassyEyedFish</title>
+<meta charset="UTF-8"/>
+<style>
+@font-face {
+    font-family: IBMPlexMono;
+    src: url("fonts/IBMPlexMono-Regular.ttf");
+}
+
+body {
+    background-color: #131411;
+    color: #F9F8F5;
+    font-family: IBMPlexMono, monospace;
+    font-size: 1em;
+}
+
+div {
+    width: 48em;
+    margin: auto;
+    padding: 1em;
+}
+
+pre {
+    margin: 0;
+    font-family: IBMPlexMono, monospace;
+}
+
+a, .pr {
+    color: #ae81ff;
+}
+
+a:hover {
+    color: #8160be;
+}
+
+.bl {
+    color: #75715e;
+}
+
+.ma {
+    color: #ff005d;
+}
+
+.or {
+    color: #ff981f;
+}
+
+.ye {
+    color: #f4bf75;
+}
+
+.gr {
+    color: #a6e22e;
+}
+
+.cy {
+    color: #4fe5ff;
+}
+
+.code {
+     background-color: #272822;
+}
+
+.bold {
+    font-weight: bold;
+}
+</style>
 </head>
 
 <body><div><pre>
