Full refator to simpler style.

--- a/index.html
+++ b/index.html
@@ -3,30 +3,20 @@
 <html lang='en'>
 
 <head>
+
 <title>GlassyEyedFish</title>
 <meta charset="UTF-8"/>
+
 <style>
-@font-face {
-    font-family: IBMPlexMono;
-    src: url("fonts/IBMPlexMono-Regular.ttf");
-}
-
 body {
-    background-color: #131411;
-    color: #F9F8F5;
-    font-family: IBMPlexMono, monospace;
-    font-size: 1em;
-}
+    background-color: #111111;
+    color: #dddddd;
 
-div {
-    width: 48em;
+    line-height: 1.6;
+    font-family: sans-serif;
+
+    max-width: 40em;
     margin: auto;
-    padding: 1em;
-}
-
-pre {
-    margin: 0;
-    font-family: IBMPlexMono, monospace;
 }
 
 a, .pr {
@@ -37,149 +27,68 @@ a:hover {
     color: #8160be;
 }
 
-.bl {
-    color: #75715e;
-}
-
-.ma {
-    color: #ff005d;
-}
-
-.or {
-    color: #ff981f;
-}
-
-.ye {
-    color: #f4bf75;
-}
-
-.gr {
-    color: #a6e22e;
-}
-
-.cy {
-    color: #4fe5ff;
-}
-
-.code {
-     background-color: #272822;
-}
-
-.bold {
-    font-weight: bold;
+pre {
+     padding: 1em;
+     background-color: #333333;
 }
 </style>
+
 </head>
 
-<body><div><pre>
-+------------------------------------------------------------------------------+
-| ~/index.html                                                                 |
-+------------------------------------------------------------------------------+
-0 -  =  - 1 -  =  - 2 -  =  - 3 -  =  - 4 -  =  - 5 -  =  - 6 -  =  - 7 -  =  - 
-+------------------------------------------------------------------------------+
-|                                                                              |
-|                                                               /__/           |
-|    ____ _                               O                 /_//  /_/__/__/    |
-|   / ___| | __ _ ___ ___ _   _                            / //  / /  /  /_/   |
-|  | |  _| |/ _` / __/ __| | | |           o             _/_//__/_/__/__/ /_/_/|
-|  | |_| | | (_| \__ \__ \ |_| |          .        _____/      )        \/_/_/_|
-|   \____|_|\__,_|___/___/\__, |                 _/ )   )   )    )   )    )   )|
-|                         |___/                _/  \      )   )    )    )   )  |
-|     _____               _                  _/     \        )   )    )    )   |
-|    | ____|   _  ___  __| |        O     __/ /##\   \ )       )    )    )    )|
-|    |  _|| | | |/ _ \/ _` |            _/oO /## #\   \    )      )    )    )  |
-|    | |__| |_| |  __/ (_| |       o   /  __ \####/    \      ) _________ )    |
-|    |_____\__, |\___|\__,_|        .   \/  \ \##/      \    __/=========\   ) |
-|          |___/                             \          /     ===========|     |
-|                                     /\_/\__/         /   ) \===========| )   |
-|       _____ _     _                 \__________     /       \_________/    ) |
-|      |  ___[ ]___| |__                         \___/   )  )        )    )    |
-|      | |_  | / __| '_ \                             \________________________|
-|      |  _| | \__ \ | | |                               \====\_               |
-|      | |   |_|___/_| |_|                                \=====\              |
-|      |_|                                                 \=====\             |
-|                                                           \====/             |
-|                                                            \__/              |
-+------------------------------------------------------------------------------+
+<body>
+
+<div>
+
+<h1>Glassy Eyed Fish</h1>
  
-<span class=bl>Welcome to my website, the hub of all things me. This page mostly serves as a
-literal index of the rest of the side, but it also serves as a link directory
-and a few other functions.</span>
+<p>Welcome to my website, the hub of all things me. This page mostly serves as a
+literal index of the rest of the site, but it also serves as a link directory
+and a few other functions.</p>
 
-<span id=000>[<a href=#000>000</a>]</span> <span class=ma>Table of Contents</span>
-================================================================================
+<h2>Where to Find Me</h2>
 
-<span class=bl>Navigate this pages with the links in the table. To come back to this table
-click the link in the header of any section below.</span>
+<ul>
+    <li>GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish/</a></li>
+    <li>Itch: <a href=https://glassyeyedfish.itch.io>https://glassyeyedfish.itch.io/</a></li>
+</ul>
 
-Table of Contents ........................................................ [<a href=#000>000</a>]
-Where to Fine Me ......................................................... [<a href=#001>001</a>]
-Link Directory ........................................................... [<a href=#002>002</a>]
-Projects ................................................................. [<a href=#003>003</a>]
-Banners .................................................................. [<a href=#004>004</a>]
+<h2>Link Directory</h2>
 
-<span id=001>[<a href=#000>001</a>]</span> <span class=ma>Where to Find Me</span>
-================================================================================
+<b>SADGRL.ONLINE</b> : <a href=https://sadgrl.online/>https://sadgrl.online/</a>
+<p>The site which inspited me to make this site in the first place.</p>
 
-* GitHub: <a href=https://github.com/glassyeyedfish>https://github.com/glassyeyedfish/</a>
-* Itch: <a href=https://glassyeyedfish.itch.io>https://glassyeyedfish.itch.io/</a>
+<b>Chad's Guide</b> : <a href=https://landchad.net/>https://landchad.net/</a>
+<p>The "Chad's Guide to Starting Your Own Website". Used to start this very
+website! Although now it's hosted using Github Pages.</p>
 
-<span id=002>[<a href=#000>002</a>]</span> <span class=ma>Link Directory</span>
-================================================================================
+<b>Vimm's Lair</b> : <a href=https://vimm.net/>https://vimm.net/</a>
+<p>An excellent source of retro games and the emulators needed to play them.</p>
 
-<span class=cy>SADGRL.ONLINE</span> : <a href=https://sadgrl.online/>https://sadgrl.online/</a>
-    <span class=bl>The site which inspited me to make this site in the first place.</span>
+<b>MetaMath Proof Explorer</b> : <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html</a>
+<p>A collection of incredibly rigerous, computer verified mathematical proofs
+for thousands of theorems in maths and logic. I personally love this
+website to death, but I doubt you will. Either way, it's here for those
+of you who appreciate knoledge at it's purest.</p>
 
-<span class=cy>Kiss Linux</span> : <a href=https://kisslinux.org/>https://kisslinux.org/</a>
-    <span class=bl>The website which inspired the design of mine.</span>
+<b>W3Schools</b> : <a href=https://www.w3schools.com/>https://www.w3schools.com/</a>
+<p>A fantastic resource/reference for coding including HTML, CSS, JavaScript,
+Python, Java, etc... I personally use it to remember how to declare a
+variable every time I go back to a language I haven't used in a while.</p>
 
-<span class=cy>Chad's Guide</span> : <a href=https://landchad.net/>https://landchad.net/</a>
-    <span class=bl>The "Chad's Guide to Starting Your Own Website". Used to start this very
-    website! Although now it's hosted using Github Pages.</span>
+<h2>Banners</h2>
 
-<span class=cy>Vimm's Lair</span> : <a href=https://vimm.net/>https://vimm.net/</a>
-    <span class=bl>An excellent source of retro games and the emulators needed to play them.</span>
+<a href=https://sadgrl.online/><img alt="sadgrl.online banner" src=https://sadgrl.online/images/homepage/button-new.gif></a>
+<a href=https://landchad.net/><img alt="landchad.net banner" src=https://landchad.net/pix/landchad.gif></a>
 
-<span class=cy>MetaMath Proof Explorer</span> : <a href=https://us.metamath.org/mpeuni/mmset.html>https://us.metamath.org/mpeuni/mmset.html</a>
-    <span class=bl>A collection of incredibly rigerous, computer verified mathematical proofs
-    for thousands of theorems in maths and logic. I personally love this
-    website to death, but I doubt you will. Either way, it's here for those
-    of you who appreciate knoledge at it's purest.</span>
+<p> Published under the <a href=LICENSE>MIT License</a>, feel free to take what 
+you like and make cool things yourself! Of course, if you do take anything from 
+this site or get heavy inspiration from it, any kind of credit would be cool of 
+you.</p>
 
-<span class=cy>W3Schools</span> : <a href=https://www.w3schools.com/>https://www.w3schools.com/</a>
-    <span class=bl>A fantastic resource/reference for coding including HTML, CSS, JavaScript,
-    Python, Java, etc... I personally use it to remember how to declare a
-    variable every time I go back to a language I haven't used in a while.</span>
+<p>Created by Clyde (GlassyEyedFish)</p>
 
-<span class=cy>NAND 2 Tetris</span> : <a href=https://www.nand2tetris.org/>https://www.nand2tetris.org/</a>
-    <span class=bl>The website hositng a course where you build a basic computer from a single
-    logic gate! A good starting place if you want to have a deep understanding
-    of how computers are put together.</span>
+</div>
 
-<span id=003>[<a href=#000>003</a>]</span> <span class=ma>Projects</span>
-================================================================================
-</pre></div><div class=code><pre>
-fn main() {
-    println!("Hello, world!");
-}
-</pre></div><div><pre>
-<span id=004>[<a href=#000>004</a>]</span> <span class=ma>Banners</span>
-================================================================================
-
-<a href=https://sadgrl.online/><img alt="sadgrl.online banner" src=https://sadgrl.online/images/homepage/button-new.gif></a> <a href=https://landchad.net/><img alt="landchad.net banner" src=https://landchad.net/pix/landchad.gif></a>
-
-+------------------------------------------------------------------------------+
-| Published under the <a href=LICENSE>MIT License</a>, feel free to take what you like and make    |
-| cool things yourself! Of course, if you do take anything from this site or   | 
-| get heavy inspiration from it, any kind of credit would be cool of you.      |
-|                                                                              | 
-| Created by Clyde (GlassyEyedFish)                                            | 
-+------------------------------------------------------------------------------+
-0 -  =  - 1 -  =  - 2 -  =  - 3 -  =  - 4 -  =  - 5 -  =  - 6 -  =  - 7 -  =  - 
-+------------------------------------------------------------------------------+
-|   Dedicated to all human beings.                                             |
-|       -- Thom Yorke                                                          |
-+------------------------------------------------------------------------------+
-</pre></div></body>
+</body>
 
 </html>
