Redid intro paragraph.

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@ pre {
 
 <h1>Glassy Eyed Fish</h1>
  
-<p>Welcome to my website, the hub of all things me. This page mostly serves as a
-literal index of the rest of the site, but it also serves as a link directory
-and a few other functions.</p>
-
+<p>Welcome to my website, the hub of all things me. For now it's just this one 
+page. Besides some personal links to my profiles on other sites, feel free 
+to browse my small link directory for other cool websites.
 <h2>Where to Find Me</h2>
 
 <ul>
