--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@ pre {
      padding: 1em;
      background-color: #333333;
 }
+
+.pic {
+    display: block;
+    padding: 1em;
+    margin-left: auto;
+    margin-right: auto;
+}
 </style>
 
 </head>
@@ -38,6 +45,8 @@ pre {
 <body>
 
 <div>
+
+    <img src="assets/gef.png" alt="Logo, a grayscale illustration of a fish" width=200 class="pic">
 
 <h1>Glassy Eyed Fish</h1>
  
