--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ you like and make cool things yourself! Of course, if you do take anything from
 this site or get heavy inspiration from it, any kind of credit would be cool of 
 you.</p>
 
-<p>Created by Clyde (GlassyEyedFish)</p>
+<p>Created by William (GlassyEyedFish)</p>
 
 </div>
 
